--- a/css/About-us.css
+++ b/css/About-us.css
@@ -17,7 +17,8 @@ body {
     font-family: 'Kanit', sans-serif;
     color: black;
 }
-body::before{
+
+body::before {
     content: '';
     position: absolute;
     left: 0;
@@ -26,7 +27,7 @@ body::before{
     height: 200vh;
     z-index: -3000;
     background-image: url("../images/PageBg.png");
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     opacity: .3;
 }
@@ -45,10 +46,12 @@ body::-webkit-scrollbar-thumb {
     outline: 1px solid rgb(255, 255, 255);
     border-radius: 50px;
 }
-.container{
+
+.container {
     max-width: 1500px;
     margin: 0px auto;
-    
+    animation: pageAnimation .75s ease-in-out;
+
 }
 
 
@@ -146,6 +149,7 @@ header .searchInput {
     color: var(--mainColor);
     transition: .2s ease-in-out;
 }
+
 header .searchInput input {
     background: transparent;
     flex: 1;
@@ -164,6 +168,7 @@ header input::placeholder {
     padding-left: 5px;
     opacity: 0.5;
 }
+
 header .searchInput button img {
     width: 40px;
     border-radius: 40px;
@@ -191,60 +196,195 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
     display: none;
 }
+
 /* Removes the X from the search bar */
 
 
 /* Type you code here */
+/* Tasneem */
+.section1 {
+    padding: 20px;
+    display: flex;
+    width: 90%;
+    margin: 30px 20px;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    height: 450px;
+}
+
+.section1 .header h1 {
+    color: var(--mainColor);
+    font-size: 2.7rem;
+    margin-left: 25px;
+}
+
+.section1 .sec1 {
+    padding: 5px;
+    margin: 15px 20px 20px;
+    height: 300px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.section1 .sec1 div p {
+    font-size: 1.3rem;
+    margin-top: -17px;
+
+}
+
+.section1 .sec1 .main-img {
+    width: fit-content;
+    margin-top: -25px;
+    margin-right: -10px;
+
+}
+
+.section1 .sec1 img {
+    height: 300px;
+}
+
+.section1 .sec2 {
+    padding: 5px;
+    margin: -137px 20px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    height: 200px;
+}
+
+.section1 .sec2 div h2 {
+    color: var(--mainColor);
+    font-size: 1.8rem;
+
+}
+
+.section1 .sec2 div p {
+    font-size: 1.3rem;
+}
+
+.section2 {
+    text-align: center;
+    padding: 20px;
+    margin: 134px 5px 10px;
+    position: relative;
+}
+
+.section2 .list {
+    width: 100%;
+    padding: 20px;
+    margin: 10px 15px;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.section2 .title {
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 45px;
+
+}
+
+.section2 .title h2 {
+    word-spacing: 6px;
+    font-size: 1.9rem;
+    opacity: #0000008e;
+}
+
+.section2 .list div .cycle {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+    margin-top: -50px;
+    box-shadow: 0px 1px 2px 0px #00000082;
+}
+
+.section2 .list div .cycle:hover {
+    filter: brightness(1.5);
+    transform: scale(1.2) rotate(1deg);
+}
+
+.section2 .list div .cycle img {
+    margin: 15px auto;
+}
+
+.section2 .list div .cycle p {
+    color: var(--mainColor);
+    margin: -12px auto;
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+.section2 .list div p {
+    font-size: 1.1rem;
+    padding: 5px;
+    margin: 20px auto;
+}
+
+/*Tasneem End*/
 
 
-
-footer{
+footer {
     background-color: #F4F4F5;
     color: white;
     padding: 20px 0;
 }
-footer .container{
+
+footer .container {
     display: flex;
     justify-content: space-around;
-    
+
 }
-footer .container h1{
+
+footer .container h1 {
     color: var(--mainColor);
     margin-bottom: 10px;
 }
+
 footer .f1 {
     width: 20%;
 }
-footer ul{
+
+footer ul {
     list-style-type: none;
 }
-footer ul li a{
+
+footer ul li a {
     text-decoration: none;
     color: black;
     transition: .2s;
 }
-footer ul li a:hover{
+
+footer ul li a:hover {
     color: rgb(88, 88, 88);
 }
 
-footer .f4 li{
+footer .f4 li {
     display: inline;
 }
-footer img{
+
+footer img {
     width: 60px;
     margin: 5px;
     transition: .2s;
     color: black;
 }
-footer img:hover{
+
+footer img:hover {
     filter: drop-shadow(0px 0px 3px);
 }
 
-footer p , footer li{
+footer p, footer li {
     color: black;
     font-size: 1.3rem;
 }
-div.rights{
+
+div.rights {
     background-color: white;
     display: flex;
     align-items: center;
