--- a/css/ContactUs.css
+++ b/css/ContactUs.css
@@ -25,7 +25,7 @@ body::before {
     left: 0;
     top: 0;
     width: 100%;
-    height: 800vh;
+    height: 100%;
     z-index: -3000;
     background-image: url("../images/PageBg.png");
     background-size: cover;
@@ -149,6 +149,7 @@ header .searchInput {
     color: var(--mainColor);
     transition: .2s ease-in-out;
 }
+
 header .searchInput input {
     background: transparent;
     flex: 1;
@@ -167,6 +168,7 @@ header input::placeholder {
     padding-left: 5px;
     opacity: 0.5;
 }
+
 header .searchInput button img {
     width: 40px;
     border-radius: 40px;
@@ -195,12 +197,159 @@ input[type="search"]::-webkit-search-results-decoration {
     display: none;
 }
 
-/* Start your code here */
+/*start body*/
+
+
+.mainContainer {
+    width: 100%;
+    height: 30em;
+    padding: 3em;
+
+    display: flex;
+    justify-content: center;
+    animation: pageAnimation .75s ease-in-out;
+}
+
+
+.mainContainer .content {
+    height: 100%;
+    width: 50%;
+    padding-left: 3.5em;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.mainContainer .content h1 {
+    width: 60%;
+    color: var(--mainColor);
+    line-height: 1.7em;
+    font-size: 2.9em;
+}
+
+.mainContainer .content p {
+    width: 80%;
+    height: 100%;
+    font-size: 1.4em;
+    font-weight: 600;
+    line-height: 1.8;
+}
+
+.mainContainer .content p a {
+    text-decoration: none;
+}
+
+
+/*send to us*/
+.mainContainer .senToUs {
+    width: 30%;
+    height: 100%;
+    border-radius: 2em;
+    padding: 2em;
+    background-color: white;
+    filter: drop-shadow(2px 4px 10px black);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+}
+
+.mainContainer .senToUs .nameContainer {
+    width: 100%;
+    height: 15%;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #EEEE;
+
+
+    display: flex;
+}
+
+.mainContainer .senToUs .nameContainer .img {
+    width: 10%;
+    height: 100%;
+}
+
+.mainContainer .senToUs .nameContainer .img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    opacity: .5;
+}
+
+.mainContainer .senToUs .nameContainer input {
+    padding-left: 5px;
+    height: 100%;
+    width: 100%;
+    font-size: 1.2em;
+    border: none;
+    outline: none;
+    background-color: #EEEE;
+
+}
+
+.mainContainer .senToUs>input {
+    width: 100%;
+    height: 35%;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    background-color: #EEEE;
+    padding: 10px;
+    font-size: 1.1em;
+
+
+    position: relative;
+
+}
+
+.mainContainer .senToUs>input::placeholder {
+    position: absolute;
+    top: 10%;
+    left: 8%;
+    font-size: 1.2em;
+
+}
+
+
+.mainContainer .senToUs .bottoms {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.mainContainer .senToUs .bottoms p {
+    color: var(--mainColor);
+    font-size: 1.1em;
+}
+
+.mainContainer .senToUs .bottoms button {
+    width: 40%;
+    height: 100%;
+    border: none;
+    border-radius: 3em;
+    font-size: 1.1em;
+    color: white;
+    background-color: var(--mainColor);
+
+    transition: .5s;
+}
+
+.mainContainer .senToUs .bottoms button:hover {
+    transform: scale(1.03);
+}
+
+/*end body*/
 
 footer {
     background-color: #F4F4F5;
     color: white;
     padding: 20px 0;
+    margin-top: 3em;
 }
 
 footer .container {
