--- a/css/About-us.css
+++ b/css/About-us.css
@@ -242,7 +242,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .section1 .sec1 img {
-    height: 300px;
+    height: 350px;
 }
 
 .section1 .sec2 {
@@ -304,9 +304,11 @@ input[type="search"]::-webkit-search-results-decoration {
     box-shadow: 0px 1px 2px 0px #00000082;
 }
 
-.section2 .list div .cycle:hover {
+.section2 .list div
+ .cycle:hover {
     filter: brightness(1.5);
-    transform: scale(1.2) rotate(1deg);
+    transform: scale(1.1) rotate(1deg)  ;
+     transition:1s;
 }
 
 .section2 .list div .cycle img {
