--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -54,4 +54,160 @@ body::-webkit-scrollbar-thumb {
 div.logo img{
     width: 200px;
     padding-top: 10px;
+    margin-left: 20px;
+}
+
+
+
+div.sign-up {
+    background-color: white;
+    margin-left: 450px;
+    height: 600px;
+    border-radius: 25px;
+    width: 500px;
+    border:  #e9e6e6;
+    box-shadow: 0px 0px 20px 12px #b7b7b7;
+}
+div#hedder {
+    height: 60px;
+}
+
+div#hedder img {
+    width: 75px;
+    margin-left: 215px;
+    margin-top: 10px;
+}
+
+.sign-up>p {
+    font-size: 55px;
+    margin-left: 165px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    cursor:default;
+
+}
+.sign-up div.inputs{
+    margin-left: 90px;
+
+}
+
+.sign-up .inputs input {
+    height: 25px;
+    background-color:rgb(232, 229, 229);
+    border: 0px;
+    border-radius: 30px;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+.sign-up input#F-name {
+    width: 150px;
+}
+.sign-up input#L-name {
+    width: 150px;
+    margin-left: 20px;
+}
+
+
+.sign-up input#Email {
+    width: 320px;
+}
+.sign-up input#password {
+    width: 320px;
+}
+
+.sign-up input#C-password {
+    width: 320px;
+}
+
+
+.sign-up a {
+    text-decoration: none;
+    color:var(--mainColor);
+}
+
+.sign-up input#S-in {
+    width: 165px;
+    margin: 10px 0 30px 65px;
+    background-color:var(--mainColor);
+    color: white;
+    cursor: pointer;
+    padding: 0px;
+    height: 35px;
+}
+.sign-up hr#top {
+    margin: 0 100px -15px 250px;
+}
+
+.sign-up .line p  {
+    margin-left: 225px;
+    color: grey;
+    cursor:default;
+}
+
+.sign-up hr#bottom {
+    margin: -10px 280px 10px 80px;
+}
+.sign-up #text p{
+    margin-left: 140px;
+    margin-bottom: 10px;
+    color: gray;
+    
+}
+
+.sign-up div#google{
+    border: 1px solid black;
+    border-radius: 30px;
+    height: 35px;
+    margin: 10px 155px 5px 135px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 30px;
+}
+
+.sign-up div#google a{
+    color: #000;
+    font-weight: bold;
+    font-size: medium;
+ }
+
+ .sign-up .google img {
+    position: absolute;
+    left: 605px;
+    top: 540px;
+    width: 20px;
+}
+
+.sign-up div#apple{
+    border: 1px solid black;
+    border-radius: 30px;
+    height: 35px;
+    margin: 10px 155px 5px 135px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 30px;
+}
+
+.sign-up div#apple a{
+    color: #000;
+    font-weight: bold;
+    font-size: medium;
+ }
+
+ .sign-up .apple img {
+    position: absolute;
+    left: 605px;
+    top: 585px;
+    width: 20px;
+}
+
+.sign-up div#go {
+    margin: 10px 150px 0px;
+    color: gray;
+}
+
+.sign-up .inputs input:focus {
+    outline: none;
 }
