--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -17,7 +17,8 @@ body {
     font-family: 'Kanit', sans-serif;
     color: black;
 }
-body::before{
+
+body::before {
     content: '';
     position: absolute;
     left: 0;
@@ -26,7 +27,7 @@ body::before{
     height: 200vh;
     z-index: -3000;
     background-image: url("../images/PageBg.png");
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     opacity: .3;
 }
@@ -45,17 +46,17 @@ body::-webkit-scrollbar-thumb {
     outline: 1px solid rgb(255, 255, 255);
     border-radius: 50px;
 }
-.container{
+
+.container {
     max-width: 1500px;
     margin: 0px auto;
-    
+    animation: pageAnimation .75s ease-in-out;
 }
 
-div.logo img{
+div.logo img {
     width: 200px;
     padding-top: 10px;
     margin-left: 20px;
-    
 }
 
 
@@ -67,9 +68,10 @@ div.login {
     height: 540px;
     border-radius: 25px;
     width: 500px;
-    border:  #e9e6e6;
+    border: #e9e6e6;
     box-shadow: 0px 0px 20px 12px #b7b7b7;
 }
+
 div#hedder {
     height: 85px;
 }
@@ -85,10 +87,11 @@ div#hedder img {
     margin-left: 165px;
     font-weight: bold;
     margin-bottom: 20px;
-    cursor:default;
+    cursor: default;
 
 }
-.login div.inputs{
+
+.login div.inputs {
     margin-left: 90px;
 
 }
@@ -96,7 +99,7 @@ div#hedder img {
 .login .inputs input {
     width: 320px;
     height: 25px;
-    background-color:rgb(232, 229, 229);
+    background-color: rgb(232, 229, 229);
     border: 0px;
     border-radius: 30px;
     margin-bottom: 10px;
@@ -109,39 +112,41 @@ div#hedder img {
 
 .login a {
     text-decoration: none;
-   color:  var(--mainColor);
+    color: var(--mainColor);
 }
 
 .login input#S-in {
     width: 165px;
     margin: 15px 0 30px 65px;
-   background-color:  var(--mainColor);
+    background-color: var(--mainColor);
     color: white;
     cursor: pointer;
     padding: 0px;
     height: 35px;
 }
+
 .login hr#top {
     margin: 0 100px -15px 250px;
 }
 
-.login .line p  {
+.login .line p {
     margin-left: 225px;
     color: grey;
-    cursor:default;
+    cursor: default;
 }
 
 .login hr#bottom {
     margin: -10px 280px 10px 80px;
 }
-.login #text p{
+
+.login #text p {
     margin-left: 140px;
     margin-bottom: 10px;
     color: gray;
 }
 
 
-.login div#google{
+.login div#google {
     border: 1px solid black;
     border-radius: 30px;
     height: 35px;
@@ -152,20 +157,20 @@ div#hedder img {
     padding-left: 30px;
 }
 
-.login div#google a{
+.login div#google a {
     color: #000;
     font-weight: bold;
     font-size: medium;
- }
+}
 
- .login .google img {
+.login .google img {
     position: absolute;
     left: 605px;
     top: 513px;
     width: 20px;
 }
 
-.login div#apple{
+.login div#apple {
     border: 1px solid black;
     border-radius: 30px;
     height: 35px;
@@ -176,13 +181,13 @@ div#hedder img {
     padding-left: 30px;
 }
 
-.login div#apple a{
+.login div#apple a {
     color: #000;
     font-weight: bold;
     font-size: medium;
- }
+}
 
- .login .apple img {
+.login .apple img {
     position: absolute;
     left: 605px;
     top: 557px;
