--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -17,7 +17,8 @@ body {
     font-family: 'Kanit', sans-serif;
     color: black;
 }
-body::before{
+
+body::before {
     content: '';
     position: absolute;
     left: 0;
@@ -26,7 +27,7 @@ body::before{
     height: 200vh;
     z-index: -3000;
     background-image: url("../images/PageBg.png");
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     opacity: .3;
 }
@@ -45,13 +46,14 @@ body::-webkit-scrollbar-thumb {
     outline: 1px solid rgb(255, 255, 255);
     border-radius: 50px;
 }
-.container{
+
+.container {
     max-width: 1500px;
     margin: 0px auto;
-    
+    animation: pageAnimation .75s ease-in-out;
 }
 
-div.logo img{
+div.logo img {
     width: 200px;
     padding-top: 10px;
     margin-left: 20px;
@@ -65,9 +67,10 @@ div.sign-up {
     height: 600px;
     border-radius: 25px;
     width: 500px;
-    border:  #e9e6e6;
+    border: #e9e6e6;
     box-shadow: 0px 0px 20px 12px #b7b7b7;
 }
+
 div#hedder {
     height: 60px;
 }
@@ -83,17 +86,18 @@ div#hedder img {
     margin-left: 165px;
     font-weight: bold;
     margin-bottom: 10px;
-    cursor:default;
+    cursor: default;
 
 }
-.sign-up div.inputs{
+
+.sign-up div.inputs {
     margin-left: 90px;
 
 }
 
 .sign-up .inputs input {
     height: 25px;
-    background-color:rgb(232, 229, 229);
+    background-color: rgb(232, 229, 229);
     border: 0px;
     border-radius: 30px;
     margin-bottom: 20px;
@@ -103,6 +107,7 @@ div#hedder img {
 .sign-up input#F-name {
     width: 150px;
 }
+
 .sign-up input#L-name {
     width: 150px;
     margin-left: 20px;
@@ -112,6 +117,7 @@ div#hedder img {
 .sign-up input#Email {
     width: 320px;
 }
+
 .sign-up input#password {
     width: 320px;
 }
@@ -123,39 +129,41 @@ div#hedder img {
 
 .sign-up a {
     text-decoration: none;
-    color:var(--mainColor);
+    color: var(--mainColor);
 }
 
 .sign-up input#S-in {
     width: 165px;
     margin: 10px 0 30px 65px;
-    background-color:var(--mainColor);
+    background-color: var(--mainColor);
     color: white;
     cursor: pointer;
     padding: 0px;
     height: 35px;
 }
+
 .sign-up hr#top {
     margin: 0 100px -15px 250px;
 }
 
-.sign-up .line p  {
+.sign-up .line p {
     margin-left: 225px;
     color: grey;
-    cursor:default;
+    cursor: default;
 }
 
 .sign-up hr#bottom {
     margin: -10px 280px 10px 80px;
 }
-.sign-up #text p{
+
+.sign-up #text p {
     margin-left: 140px;
     margin-bottom: 10px;
     color: gray;
-    
+
 }
 
-.sign-up div#google{
+.sign-up div#google {
     border: 1px solid black;
     border-radius: 30px;
     height: 35px;
@@ -166,20 +174,20 @@ div#hedder img {
     padding-left: 30px;
 }
 
-.sign-up div#google a{
+.sign-up div#google a {
     color: #000;
     font-weight: bold;
     font-size: medium;
- }
+}
 
- .sign-up .google img {
+.sign-up .google img {
     position: absolute;
     left: 605px;
     top: 540px;
     width: 20px;
 }
 
-.sign-up div#apple{
+.sign-up div#apple {
     border: 1px solid black;
     border-radius: 30px;
     height: 35px;
@@ -190,13 +198,13 @@ div#hedder img {
     padding-left: 30px;
 }
 
-.sign-up div#apple a{
+.sign-up div#apple a {
     color: #000;
     font-weight: bold;
     font-size: medium;
- }
+}
 
- .sign-up .apple img {
+.sign-up .apple img {
     position: absolute;
     left: 605px;
     top: 585px;
