--- a/css/About-us.css
+++ b/css/About-us.css
@@ -50,8 +50,6 @@ body::-webkit-scrollbar-thumb {
 .container {
     max-width: 1500px;
     margin: 0px auto;
-    animation: pageAnimation .75s ease-in-out;
-
 }
 
 
@@ -211,6 +209,8 @@ input[type="search"]::-webkit-search-results-decoration {
     justify-content: space-between;
     position: relative;
     height: 450px;
+    animation: pageAnimation .75s ease-in-out;
+
 }
 
 .section1 .header h1 {
@@ -242,9 +242,11 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .section1 .sec1 img {
-    height: 350px;
+    height: 420px;
 }
-
+.section2{
+    animation: pageAnimation .75s ease-in-out;
+}
 .section1 .sec2 {
     padding: 5px;
     margin: -137px 20px 30px;
@@ -302,13 +304,14 @@ input[type="search"]::-webkit-search-results-decoration {
     background-color: #FFFFFF;
     margin-top: -50px;
     box-shadow: 0px 1px 2px 0px #00000082;
+    transition: 1s ease-out;
 }
 
 .section2 .list div
  .cycle:hover {
     filter: brightness(1.5);
-    transform: scale(1.1) rotate(1deg)  ;
-     transition:1s;
+    transform: scale(1.05) rotate(1deg);
+    
 }
 
 .section2 .list div .cycle img {
