--- a/css/ContactUs.css
+++ b/css/ContactUs.css
@@ -288,7 +288,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
 }
 
-.mainContainer .senToUs>input {
+.mainContainer .senToUs>textarea {
     width: 100%;
     height: 35%;
     border-radius: 8px;
@@ -296,18 +296,13 @@ input[type="search"]::-webkit-search-results-decoration {
     outline: none;
     background-color: #EEEE;
     padding: 10px;
-    font-size: 1.1em;
-
-
-    position: relative;
+    font-size: 1.4em;
+    resize: none;
 
 }
 
-.mainContainer .senToUs>input::placeholder {
-    position: absolute;
-    top: 10%;
-    left: 8%;
-    font-size: 1.2em;
+.mainContainer .senToUs>textarea::placeholder {
+    font-size: 1.1em;
 
 }
 
