--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -24,7 +24,7 @@ body::before {
     left: 0;
     top: 0;
     width: 100%;
-    height: 200vh;
+    height: 100%;
     z-index: -3000;
     background-image: url("../images/PageBg.png");
     background-size: cover;
