--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -62,10 +62,8 @@ div.logo img {
 
 
 .Sign-up {
-    position: relative;
-    left: 500px;
+    margin: 0 auto;
     background-color: white;
-    height: 600px;
     border-radius: 25px;
     width: 500px;
     border: #e9e6e6;
@@ -87,10 +85,10 @@ div#hedder img {
 .Sign-up>p {
     font-size: 50px;
     position: relative;
-    left: 170px;
+    left: 175px;
     font-weight: bold;
     cursor: default;
-    height: 100px;
+    height: 90px;
 }
 
 .Sign-up .inputs {
@@ -101,8 +99,9 @@ div#hedder img {
 .Sign-up .inputs input {
     width: 320px;
     height: 30px;
-    background-color: rgb(232, 229, 229);
-    outline: black;
+    background-color: #EEEE;
+    outline: none;
+    border: none;
     border-radius: 30px;
     margin-bottom: 20px;
     padding: 10px;
@@ -139,14 +138,15 @@ label#l-name{
 }
 
 .Sign-up input#S-up {
-    width: 165px;
-    margin: 0px 0 30px 65px;
+    width: 145px;
+    margin: 0px 0 30px 75px;
     background-color: var(--mainColor);
     color: white;
     cursor: pointer;
     padding: 0px;
     height: 35px;
     font-size: large;
+    transition: 1s ;
 }
 
 .Sign-up hr#top {
@@ -231,9 +231,10 @@ label#l-name{
 .Sign-up .inputs input:valid~label,
 .Sign-up .inputs input:focus~label{
 color: var(--mainColor);
-transform: translateY(-15px) ;
-font-size: 11px;
+transform: translateY(-20px) ;
 padding:0px 10px 0px 10px;
-background-color:transparent ;
 letter-spacing: 2px;
+}
+.Sign-up input#S-up:hover{
+    transform: scale(1.05,1.05);
 }
