--- a/css/Tours.css
+++ b/css/Tours.css
@@ -17,6 +17,7 @@ body {
     margin: 0;
     font-family: 'Kanit', sans-serif;
     color: black;
+    position: relative;
 }
 
 body::before {
@@ -25,7 +26,7 @@ body::before {
     left: 0;
     top: 0;
     width: 100%;
-    height: 800vh;
+    height: 100%;
     z-index: -3000;
     background-image: url("../images/PageBg.png");
     background-size: cover;
@@ -195,7 +196,270 @@ input[type="search"]::-webkit-search-results-decoration {
     display: none;
 }
 
+.Tour{
+    width: 20%;
+    height: 2.3em;
+    color: #0057FF;
+    background-color: white;
+    border-top-right-radius: 13px;
+    text-align: center;
+    font-size: 3em;
+    font-weight: 740;
+    position: absolute;
+    top: 5.5%;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Start your code here */
+.contain{
+    padding: 10px;
+    font-family: var(--mainFont);
+    position: relative;
+    height: 270vh;
+    width: 100%;
+    margin-top: 11.5em;
+    background-color: white;
+}
+.list{
+    height: 5em;
+}
+.list ul{
+    display: block;
+    list-style-type:none;
+    display:flex;
+    justify-content: space-evenly;
+    font-weight: bold;
+}
+.list ul li{
+    background-color: rgb(245, 243, 243);
+    border-radius: 30px;
+    padding: 5px 10px;
+    margin: 10px 10px;
+    width: 10%;
+    text-align: center;
+}
+.list ul li:hover{
+    background-color: rgb(195, 193, 193);
+    cursor: pointer;
+}
+.side{
+    width: 20%;
+    height: 72em;
+    background-color: white;
+    margin-bottom: 50px;
+    border-radius: 30px;
+    border: 1px solid rgba(9, 9, 9, 0.15);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px 0;
+}
+.side div{
+    width: calc(100% - 20px);
+}
+.side hr{
+    width: 80%;
+    margin: 0px auto;
+    border: 1px solid rgba(9, 9, 9, 0.15);
+}
+.side .first_sec{
+    height: 35%;
+}
+.side h3{
+    color: var(--mainColor);
+    height: 30px;
+    margin-bottom: 10px;
+}
+.side .first_sec h3{
+    height: 40px;
+}
+.side .first_sec ul{
+    list-style-type: none;
+    height: calc(100% - 50px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-weight: bold;
+}
+.side .first_sec ul li{
+    border-radius: 30px;
+}
+.side .first_sec ul li a{
+    text-decoration: none;
+    color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.side .first_sec ul li i{
+    margin-right: 10%;
+    color: var(--mainColor);
+}
+.side .checkbox{
+    height: 20%;
+}
+.side .checkbox .check-items {
+    height: calc(100% - 40px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.side .checkbox .check-items .item{
+    width: 100%;
+    height: calc((100% / 3) - 20px);
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+}
+.side .checkbox .check-items label{
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    font-weight: bold;
+}
+.side .checkbox .check-items input{
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 7px;    
+}
+.side .checkbox .check-items .item small{
+    position: absolute;
+    top: 45%;
+    left: 0;
+    width: 100%;
+    opacity: 0.6;
+}
+.price{
+    /* background-color: rgb(172, 172, 56); */
+    height: 12%;
+}
+.price input{
+    margin-left: 5px;
+    margin-bottom: 5px;
+    padding: 3px;
+    border-radius: 5px;
+    border-color: rgba(0, 0, 0, 0.3);
+}
+.price input[type="button"]{
+    border: none;
+    width: 25%;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+}
+.price input[type="button"]:hover{
+    transform: scale(1.05, 1.05);
+}
+.rate{
+    height: 18%;
+    /* background-color:cornflowerblue; */
+}
+.rate input{
+    width: 15px;
+    height: 15px;
+    margin-left: 5px;
+}
+
+/* Box Sections */
+.contain .all{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: calc(115% - 5em);
+}
+.contain .all .main{
+    border: 1px solid rgba(9, 9, 9, 0.15);
+    width: 73%;
+    height: 85%;
+    border-radius: 30px;
+    padding: 3em 0;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.contain .all .main .box{
+    background-color: white;
+    width: calc((100% / 3) - 70px);
+    height: 20em;
+    margin-bottom: 5em;
+    border-radius: 40px;
+    border: 1px solid rgba(9, 9, 9, 0.15);
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    box-shadow: -1px 1px 9px 6px #e0e0e0;
+}
+
+.contain .all .main .box .img{
+    width: 100%;
+    height: 62%;
+    border-radius: 30px;
+}
+.contain .all .main .box .img img{
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   border-radius: 30px;
+}
+.contain .all .main .box h2{
+    height: 15%;
+}
+.contain .all .main .box .location{
+  height: 15%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.contain .all .main .box .location a{
+    text-decoration: none;
+    color: black;
+}
+.contain .all .main .box .location a i{
+    color: var(--mainColor);
+}
+.contain .all .main .box .book{
+  height: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.contain .all .main .box .book a {
+    width: 34%;
+    height: 62%;
+    text-align: center;
+    background-color: var(--mainColor);
+    border-radius: 30px;
+    color: white;
+    border: none;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+}
+
+.contain .all .main .box .book a:hover{
+    transform: scale(1.05, 1.05);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 footer {
     background-color: #F4F4F5;
@@ -258,3 +522,4 @@ div.rights {
     align-items: center;
     justify-content: center;
 }
+
