--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -25,7 +25,7 @@ body::before {
     left: 0;
     top: 0;
     width: 100%;
-    height: 800vh;
+    height: 100%;
     z-index: -3000;
     background-image: url("../images/PageBg.png");
     background-size: cover;
